--- a/stylesheets/default.css
+++ b/stylesheets/default.css
@@ -1,302 +1,243 @@
-html, body, div, span, applet, object, iframe,
-h1, h2, h3, h4, h5, h6, p, blockquote, pre,
-a, abbr, acronym, address, big, cite, code,
-del, dfn, em, font, img, ins, kbd, q, s, samp,
-small, strike, strong, sub, sup, tt, var,
-b, u, i, center,
-fieldset, form, label, legend,
-table, caption, tbody, tfoot, thead, tr, th, td {
-    margin: 0;
-    padding: 0;
-    border: 0;
-    outline: 0;
-    font-size: 100%;
-    vertical-align: baseline;
-    background: transparent;
-}
+/*
+Styles for older IE versions (previous to IE9).
+*/
 
 body {
-    line-height: 1;
+	background-color: #e6e6e6;
+}
+body.custom-background-empty {
+	background-color: #fff;
+}
+body.custom-background-empty .site,
+body.custom-background-white .site {
+	box-shadow: none;
+	margin-bottom: 0;
+	margin-top: 0;
+	padding: 0;
+}
+.assistive-text,
+.site .screen-reader-text {
+	clip: rect(1px 1px 1px 1px); /* IE7 */
+}
+.full-width .site-content {
+	float: none;
+	width: 100%;
+}
+img.size-full,
+img.size-large,
+img.header-image,
+img.wp-post-image,
+img[class*="align"],
+img[class*="wp-image-"],
+img[class*="attachment-"] {
+	width: auto; /* Prevent stretching of full-size and large-size images with height and width attributes in IE8 */
+}
+.author-avatar {
+	float: left;
+	margin-top: 8px;
+	margin-top: 0.571428571rem;
+}
+.author-description {
+	float: right;
+	width: 80%;
+}
+.site {
+	box-shadow: 0 2px 6px rgba(100, 100, 100, 0.3);
+	margin: 48px auto;
+	max-width: 960px;
+	overflow: hidden;
+	padding: 0 40px;
+}
+.site-content {
+	float: left;
+	width: 65.104166667%;
+}
+body.template-front-page .site-content,
+body.single-attachment .site-content,
+body.full-width .site-content {
+	width: 100%;
+}
+.widget-area {
+	float: right;
+	width: 26.041666667%;
+}
+.site-header h1,
+.site-header h2 {
+	text-align: left;
+}
+.site-header h1 {
+	font-size: 26px;
+	line-height: 1.846153846;
+}
+.main-navigation ul.nav-menu,
+.main-navigation div.nav-menu > ul {
+	border-bottom: 1px solid #ededed;
+	border-top: 1px solid #ededed;
+	display: inline-block !important;
+	text-align: left;
+	width: 100%;
+}
+.main-navigation ul {
+	margin: 0;
+	text-indent: 0;
+}
+.main-navigation li a,
+.main-navigation li {
+	display: inline-block;
+	text-decoration: none;
+}
+.ie7 .main-navigation li a,
+.ie7 .main-navigation li {
+	display: inline;
+}
+.main-navigation li a {
+	border-bottom: 0;
+	color: #6a6a6a;
+	line-height: 3.692307692;
+	text-transform: uppercase;
+}
+.main-navigation li a:hover {
+	color: #000;
+}
+.main-navigation li {
+	margin: 0 40px 0 0;
+	position: relative;
+}
+.main-navigation li ul {
+	display: none;
+	margin: 0;
+	padding: 0;
+	position: absolute;
+	top: 100%;
+	z-index: 1;
+}
+.ie7 .main-navigation li ul {
+	left: 0;
+}
+.main-navigation li ul ul,
+.ie7 .main-navigation li ul ul {
+	top: 0;
+	left: 100%;
+}
+.main-navigation ul li:hover > ul {
+	border-left: 0;
+	display: block;
+}
+.main-navigation li ul li a {
+	background: #efefef;
+	border-bottom: 1px solid #ededed;
+	display: block;
+	font-size: 11px;
+	line-height: 2.181818182;
+	padding: 8px 10px;
+	width: 180px;
+}
+.main-navigation li ul li a:hover {
+	background: #e3e3e3;
+	color: #444;
+}
+.main-navigation .current-menu-item > a,
+.main-navigation .current-menu-ancestor > a,
+.main-navigation .current_page_item > a,
+.main-navigation .current_page_ancestor > a {
+	color: #636363;
+	font-weight: bold;
+}
+.menu-toggle {
+	display: none;
+}
+.entry-header .entry-title {
+	font-size: 22px;
+}
+#respond form input[type="text"] {
+	width: 46.333333333%;
+}
+#respond form textarea.blog-textarea {
+	width: 79.666666667%;
+}
+.template-front-page .site-content,
+.template-front-page article {
+	overflow: hidden;
+}
+.template-front-page.has-post-thumbnail article {
+	float: left;
+	width: 47.916666667%;
+}
+.entry-page-image {
+	float: right;
+	margin-bottom: 0;
+	width: 47.916666667%;
+}
+.template-front-page .widget-area .widget,
+.template-front-page.two-sidebars .widget-area .front-widgets {
+	float: left;
+	margin-bottom: 24px;
+	width: 51.875%;
+}
+.template-front-page .widget-area .widget:nth-child(odd) {
+	clear: right;
+}
+.template-front-page .widget-area .widget:nth-child(even),
+.template-front-page.two-sidebars .widget-area .front-widgets + .front-widgets {
+	float: right;
+	margin: 0 0 24px;
+	width: 39.0625%;
+}
+.template-front-page.two-sidebars .widget,
+.template-front-page.two-sidebars .widget:nth-child(even) {
+	float: none;
+	width: auto;
 }
 
-blockquote, q {
-    quotes: none;
+/* =RTL overrides for IE7 and IE8
+-------------------------------------------------------------- */
+.rtl .site-header h1,
+.rtl .site-header h2 {
+	text-align: right;
 }
-
-blockquote:before, blockquote:after,
-q:before, q:after {
-    content: '';
-    content: none;
+.rtl .widget-area,
+.rtl .author-description {
+	float: left;
 }
-
-/* remember to define focus styles! */
-:focus {
-    outline: 0;
+.rtl .author-avatar,
+.rtl .site-content {
+	float: right;
 }
-
-/* remember to highlight inserts somehow! */
-ins {
-    text-decoration: none;
+.rtl .main-navigation ul.nav-menu,
+.rtl .main-navigation div.nav-menu > ul {
+	text-align: right;
 }
-
-del {
-    text-decoration: line-through;
+.rtl .main-navigation ul li ul li,
+.rtl .main-navigation ul li ul li ul li {
+	margin-left: 40px;
+	margin-right: auto;
 }
-
-/* tables still need 'cellspacing="0"' in the markup */
-table {
-    border-collapse: collapse;
-    border-spacing: 0;
+.rtl .main-navigation li ul ul {
+	position: absolute;
+	bottom: 0;
+	right: 100%;
+	z-index: 1;
 }
-
-/* Reset for HTML 5 Elements
-   ----------------------------------------------------------------------------------------------------*/
-
-/* tells browsers that don't read html 5 tags to render like divs */
-header, footer, aside, nav, article, section {
-    display: block;
-    margin: 0;
-    padding: 0;
+.ie7 .rtl .main-navigation li ul ul {
+	position: absolute;
+	bottom: 0;
+	right: 100%;
+	z-index: 1;
 }
-
-/* clears containers with floated elements, no need for extra markup! */
-.clear:after {
-    content: ".";
-    display: block;
-    height: 0;
-    clear: both;
-    visibility: hidden;
+.ie7 .rtl .main-navigation ul li {
+	z-index: 99;
 }
-
-/* Layout
-   ----------------------------------------------------------------------------------------------------*/
-
-body {
-    border: none;
-    color: #333;
-    margin: 0 auto;
-    font: normal 16px/24px Georgia, serif;
-    width: 800px;
+.ie7 .rtl .main-navigation li ul {
+	position: absolute;
+	bottom: 100%;
+	right: 0;
+	z-index: 1;
 }
-
-.ranking-table table {
-    margin: 10px;
+.ie7 .rtl .main-navigation li {
+	margin-right: auto;
+	margin-left: 40px;
 }
-
-.ranking-table td, th {
-    background-color: #EEF;
-    text-align: center;
-    border-style: groove;
-    border-width: 3px;
-    padding: 3px;
-}
-
-.centered { 
-    text-align: center;
-}
-
-.titlerow th {
-    background-color: #FFE;
-}
-
-.qualified td {
-    background-color: #EFE;
-}
-
-.dummyplayer td {
-    background-color: #EED;
-}
-
-h1 {
-    font: italic bold 28px/50px Georgia, serif;
-    color: #f44;
-    padding-top: 20px;
-}
-
-h2 {
-    font: italic bold 24px/40px Georgia, serif;
-    line-height:34px;
-    color: #f44;
-    padding: 15px 0;
-}
-
-h3 {
-    font-size: 18px;
-    line-height: 22px;
-    color: #f44;
-    padding: 11px 0;
-}
-
-p {
-    font-weight: normal;
-    padding-bottom: 18px;
-}
-
-p.institute {
-    color: #fff;
-    font: normal 16px/24px Georgia;
-}
-
-p.address {
-    font: normal 12px/16px Georgia;
-    padding-left: 10px;
-}
-
-p.smaller {
-    font: normal 12px/16px Georgia;
-}
-
-blockquote {
-    color: #00C;
-    margin-left: 30px;
-    margin-right: 30px;
-    margin-top: 10px;
-    margin-bottom: 10pt
-}
-
-.date {
-    color: #f00;
-}
-
-table.multicolumn td {
-    vertical-align: top;
-    padding: 10px;
-}
-
-a {
-    color: #DD6600;
-    text-decoration: none;
-}
-
-a:visited {
-    color: #DD6600;
-    outline: none;
-    text-decoration: none;
-}
-
-a:hover {
-    color: #FF9900;
-    text-decoration: underline;
-}
-
-a:active {
-    color: #DD6600;
-    outline: none;
-    text-decoration: none;
-}
-
-a:focus {
-    outline: 1px dotted;
-}
-
-.autoindent {
-    margin: 30px auto;
-}
-
-.indented {
-    margin-left: 30px;
-}
-
-dt {
-    font-weight: bold;
-    font-style: italic;
-}
-
-dd {
-    margin-left: 30px;
-}
-
-#mast h1 {
-    padding: 30px 0 20px 40px;
-}
-
-#news li {
-    margin-left: 30px;
-}
-
-nav#global {
-    padding: 5px 0;
-}
-
-nav#global ul {
-    margin: 0 auto;
-    border: none;
-}
-
-nav#global ul li {
-    display: inline;
-    list-style: none;
-}
-
-nav#global ul li a {
-    color: #484;
-    font: normal bold 14px/44px Georgia, serif;
-    padding: 5px;
-    margin-right: 5px;
-    text-align: center;
-}
-
-nav#global ul li a:hover, nav#global ul li a:focus {
-    background-color: transparent;
-    color: #FF9900;
-    text-decoration: none;
-}
-
-nav#global ul li a.selected {
-    color: #FF0000;
-}
-
-nav#global ul li a.selected:hover {
-    color: #FF9900;
-}
-
-aside {
-    float: right;
-    margin-top: 40px;
-    margin-right: 20px;
-}
-
-nav#categories ul li, nav#archives ul li {
-    list-style: none;
-    margin: 5px 0;
-}
-
-iframe.footer {
-    overflow-x: hidden;
-    overflow-y: hidden;
-    border: none;
-    width: 100%;
-    height: 200px;
-}
-
-footer {
-    position: absolute;
-    left: 0;
-    width: 100%;
-    background-color: #333;
-}
-
-footer div {
-    margin: 0 auto;
-    padding:10px 0 10px 10px;
-    width: 920px;
-    border: none;
-}
-
-footer div section {
-    color: #ccc;
-    float: left;
-    margin-right: 25px;
-    width: 100%;
-    border: none;
-}
-
-footer div section h3 {
-    color: #fff;
-}
-
-nav#blogRoll ul li, nav#siteMap ul li {
-    color: #ccc;
-    list-style: disc;
-    margin-left: 15px;
+.ie7 .rtl .main-navigation li ul ul ul {
+	position: relative;
+	z-index: 1;
 }
