--- a/stylesheets/default.css
+++ b/stylesheets/default.css
@@ -76,6 +76,7 @@ body {
     color: #333;
     margin: 0 auto;
     /* font: normal 16px/24px Georgia, serif; */
+    font: 16px/24px
     width: 700px;
 }
 
@@ -109,12 +110,14 @@ body {
 
 h1 {
     /* font: italic bold 28px/50px Georgia, serif; */
+    font: bold 28px/50px
     color: #f44;
     padding-top: 20px;
 }
 
 h2 {
     /* font: italic bold 24px/40px Georgia, serif; */
+    font: bold 24px/40px
     line-height:34px;
     color: #f44;
     padding: 15px 0;
@@ -135,15 +138,18 @@ p {
 p.institute {
     color: #fff;
     /* font: normal 16px/24px Georgia; */
+    font: 16px/24px
 }
 
 p.address {
     /* font: normal 12px/16px Georgia; */
+    font: 12px/16px
     padding-left: 10px;
 }
 
 p.smaller {
     /* font: normal 12px/16px Georgia; */
+    font: 12px/16px
 }
 
 blockquote {
@@ -231,6 +237,7 @@ nav#global ul li {
 nav#global ul li a {
     color: #484;
     /* font: normal bold 14px/44px Georgia, serif; */
+    font: bold 14px/44px
     padding: 5px;
     margin-right: 5px;
     text-align: center;
