--- a/stylesheets/default.css
+++ b/stylesheets/default.css
@@ -108,7 +108,7 @@ body {
 }
 
 h1 {
-    font: normal bold 28px/50px Georgia, serif;
+    font: normal bold 28px/50px Sans-serif;;
     color: #f44;
     padding-top: 20px;
 }
