--- a/stylesheets/default.css
+++ b/stylesheets/default.css
@@ -75,7 +75,7 @@ body {
     border: none;
     color: #333;
     margin: 0 auto;
-    font: normal 16px/24px Georgia, serif;
+    font: normal 16px/24px Sans-serif;
     width: 700px;
 }
 
@@ -108,7 +108,7 @@ body {
 }
 
 h1 {
-    font: normal bold 28px/50px Georgia, serif;
+    font: normal bold 28px/50px Sans-serif;
     color: #f44;
     padding-top: 20px;
 }
@@ -134,16 +134,16 @@ p {
 
 p.institute {
     color: #fff;
-    font: normal 16px/24px Georgia;
+    font: normal 16px/24px Sans-serif;
 }
 
 p.address {
-    font: normal 12px/16px Georgia;
+    font: normal 12px/16px Sans-serif;
     padding-left: 10px;
 }
 
 p.smaller {
-    font: normal 12px/16px Georgia;
+    font: normal 12px/16px Sans-serif;
 }
 
 blockquote {
@@ -230,7 +230,7 @@ nav#global ul li {
 
 nav#global ul li a {
     color: #484;
-    font: normal bold 14px/44px Georgia, serif;
+    font: normal bold 14px/44px Sans-serif;
     padding: 5px;
     margin-right: 5px;
     text-align: center;
